more spacing issues

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -5,7 +5,7 @@ body {
   vertical-align: middle;
   background-image: url("../images/catch.JPG");
   background-attachment: fixed !important;
-  background-size: contain !important;
+  /* background-size: contain !important; */
   position: relative;
   display: table;
   width: 100%;
