--- a/src/ScoreBoard/ScoreBoard.css
+++ b/src/ScoreBoard/ScoreBoard.css
@@ -6,7 +6,7 @@
   display: none;
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 450px) {
   .scoreboard {
     max-width: 728px;
   }
