--- a/src/TeamPhotos/TeamPhotos.css
+++ b/src/TeamPhotos/TeamPhotos.css
@@ -82,7 +82,7 @@
   background: #222;
   display: inline-block;
   padding: 10px;
-  margin-right: 5px;
+  /* margin-right: 5px; */
   cursor: pointer;
   border-radius: 50%;
 }
